# Reymon-Market-Maker

./: .gitignore  README.md  meson.build
docs/: CNAME  stoikov.md
example/: historical_values_CH0493891243CHF4.csv  intraday_CH0493891243CHF4.csv  microprice_zkb.py  zkb_microprice.csv
example/c/connect/: meson.build
example/c/connect/binance/: meson.build
example/c/connect/binance/common/: get_timestamp_ms.c  meson.build  variables.c
example/c/connect/binance/main/: aktualisieren.c  freigeben.c  initialiseren.c  meson.build
example/c/connect/binance/web/: connect.c  meson.build  payload.c  websocket_callback.c  websocket_concat.c
example/c/connect/kraken/common/: meson.build  variables.c
example/c/connect/kraken/main/: aktualisieren.c  freigeben.c  initialiseren.c  meson.build
example/c/connect/kraken/web/: connect.c  meson.build  websocket_callback.c  websocket_concat.c
example/c/connect/websocket/: meson.build  websocket_close.c  websocket_open.c
example/c/kern/: aktualisieren.c  freigeben.c  initialiseren.c  kern.c  meson.build  reymm.c
example/c/risk/: meson.build
example/c/risk/inventory/: ask.c  bid.c
example/c/risk/mp/: adjustment.c  imbalance.c  kappa.c  market_spread.c  meson.build  micro_price.c  mid_price.c  optimal_spread.c  quotes.c  reservation_price.c  sigma.c  time_remaining.c  volume.c
example/c/utilities/: meson.build
example/c/utilities/common/: exit.c  meson.build  tolower.c  toupper.c  variables.c
example/c/utilities/io/: close.c  content.c  length.c  meson.build  open.c  reymm_io.c
example/c/utilities/json/: content.c  meson.build  open.c
example/c/utilities/openssl/: meson.build  signature.c
example/reymm/: main.py
example/reymm/connection/: __init__.py  common.py  common_funcs.py  reymm_close.py  reymm_connect.py  reymm_error.py  reymm_message.py  reymm_open.py
example/reymm/risk/: __init__.py  micro.py  spread.py
include/pzh/pzhmm/: pzhmm.h
include/pzh/pzhmm/börse/: binance.h
include/pzh/pzhmm/hilfs/: sicherheit.h  string.h
include/pzh/pzhmm/risiko/: bestand.h  mikropreis.h
include/reymon/reymm/: reymm.h
include/reymon/reymm/connect/: binance.h  connect.h  kraken.h
include/reymon/reymm/risk/: mp.h
include/reymon/reymm/utilities/: common.h  io.h  json.h  types.h
src/: kern.c
src/börse/: meson.build
src/börse/binance/: meson.build  verbinden.c
src/börse/kraken/: meson.build  verbinden.c
src/connect/: meson.build
src/connect/binance/: connect.c  meson.build
src/connect/kraken/: connect.c  freigeben.c  meson.build
src/hilfs/: meson.build  pzhnormalisieren.c
src/kern/: aktualisieren.cpp  freigeben.cpp  initialiseren.cpp  kern.cpp  meson.build  reymm.cpp
src/risiko/: meson.build
src/risiko/bestand/: meson.build
src/risiko/mikropreis/: meson.build
src/risk/: meson.build
src/risk/inventory/: meson.build
src/risk/mp/: adjustment.c  imbalance.c  meson.build  micro_price.c  mid_price.c  spread.c
src/utilities/: meson.build
src/utilities/curl/: meson.build
src/utilities/io/: close.c  get.c  meson.build  open.c  reymm_io.c
src/utilities/json/: get_content.c  meson.build  open.c
