# *********************************************
# *** Author: PZH Gesellschaft, SAS de CV   ***
# *** Date: 8 Mai 2026                      ***
# *** Update: 8 Mai 2026                    ***
# *** License: AGPL-3-or-later              ***
# *********************************************

datei_borse_kraken = files(
	'verbinden.c',
	
	'json/lesen_datei_json.c',
	
	'order/erstellen_order.c',
	
	'websocket/rückruf.c'
)