# *********************************************
# *** Author: PZH Gesellschaft, SAS de CV   ***
# *** Date: 8 Mai 2026                      ***
# *** Update: 8 Mai 2026                    ***
# *** License: AGPL-3-or-later              ***
# *********************************************

datei_risiko_mikropreis = files(
	'pzhmarkt_spread.c',
	'pzhmittelpreis.c',
	'pzhreservierungspreis.c',
	'pzhungleichgewicht.c',
	'pzhkursstellung.c',
	'pzhmikropreis.c',
	'pzhoptimal_spread.c',
	'pzhrestlaufzeit.c'
)