# **************************
# *** Author: Reymon Dev ***
# *** Date: 1 Mai 2026   ***
# *** Update: 1 Mai 2026 ***
# *** License: MIT       ***
# **************************

FILES_RISK_MP = files(
	'adjustment.c',
	'imbalance.c',
	'kappa.c',
	'market_spread.c',
	'micro_price.c',
	'mid_price.c',
	'optimal_spread.c',
	'quotes.c',
	'reservation_price.c',
	'sigma.c',
	'time_remaining.c',
	'volume.c'
)